整理规范驱动文件

--- a/.eide/eide.yml
+++ b/.eide/eide.yml
@@ -36,8 +36,7 @@ targets:
         - rtthread/include
         - bsp
       libList: []
-    excludeList:
-      - driver/dacx0502
+    excludeList: []
     toolchain: GCC
     toolchainConfigMap:
       GCC:
