--- a/.eide/eide.yml
+++ b/.eide/eide.yml
@@ -102,4 +102,4 @@ targets:
         resetMode: default
         runAfterProgram: true
         speed: 4000
-    uploader: STLink
+    uploader: OpenOCD
